--- a/jsprob/templates/jsprob/index.html
+++ b/jsprob/templates/jsprob/index.html
@@ -1,11 +1,13 @@
 {% extends 'jsprob/shabl.html' %}
-{% block title %} ТУРНИР ПО УСТНОМУ СЧЕТУ Приветствие {% endblock %}
+{% block title %} ТУРНИР ТРЕНАЖЕР ПО УСТНОМУ СЧЕТУ {% endblock %}
 {% block content %}
 
 <aside>
     <h5 class="featuress" id = 'nomb' style="font-style: italic; font-size: min(35px, 5.5vw);"> Здравствуйте{{nm}}! </h5>
     <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 4.2vw);"> Тренажер устного счета приветствует Вас! </h5>
+<!--    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 4.2vw);"> Идет турнир, в рамках Математической недели. </h5>-->
     <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.7vw);"> Участвовать могут все: от мала до велика. </h5>
+<!--    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.7vw);"> Участвовать могут ученики любых классов Лицея №1. </h5>-->
 </aside>
 
     <div class="features">
@@ -58,15 +60,21 @@
         {% endif %}
         {% endif %}
 
-            <h4 style='font-size: min(32px, 4vw);'> Четвертый турнир окончен 28.01.2023 </h4>
-            <h4 style="font-size: min(32px, 4vw);"> ПОЗДРАВЛЯЕМ победителей и призеров! </h4>
-            <h5 style="font-size: min(25px, 3.2vw);"> Информацию по победителям, призерам и призам можно узнать в комментарии <a href="https://vk.com/vovartus?w=wall4764971_3685%2Fall" target="_blank"> к данному посту. </a> </h5>
+            <h4 style='font-size: min(32px, 4vw);'> Математическая неделя окончена 09.04.2023 </h4>
+<!--            <h4 style='font-size: min(32px, 4vw);'> Сроки математической недели: 03.04.2023 - 07.04.2023 </h4>-->
+<!--            <h4 style="font-size: min(32px, 4vw);"> ПОЗДРАВЛЯЕМ победителей и призеров! </h4>-->
+<!--            <h4 style="font-size: min(27px, 3.5vw);"> Набравший наибольшее число (в общем ТОП-е) среди каждой параллели получит небольшой ПРИЗ! </h4>-->
+<!--            <h4 style="font-size: min(27px, 3.5vw);"> Для участия в турнире, при регистрации, вместо литеры класса укажите: 'НМ' (Например: 6НМ) </h4>-->
+<!--            <h5 style="font-size: min(25px, 3.2vw);"> Информацию по победителям, призерам и призам можно узнать в комментарии <a href="https://vk.com/vovartus?w=wall4764971_3685%2Fall" target="_blank"> к данному посту. </a> </h5>-->
+<!--            <h5 style="font-size: min(23px, 3vw);"> Призеры магматической недели, то есть те, кто набрали максимальное число баллов в своей параллели, написав литер класса 'НМ', обращайтесь в каб.№413 </h5>-->
+<!--            <h5 style="font-size: min(23px, 3vw);"> Свой результат необходимо будет подтвердить лично. </h5>-->
             <h4 style="color: red; font-size: min(32px, 4vw);"> ВНИМАНИЕ! </h4>
-            <h5 style="font-size: min(25px, 3.2vw);"> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
-            <h5 style="font-size: min(25px, 3.2vw);"> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a>.</h5>
+            <h5 style="font-size: min(23px, 3vw);"> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
+            <h5 style="font-size: min(23px, 3vw);"> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a>.</h5>
             <h5 style="font-size: min(25px, 3.2vw);"> Участники с некорректными ФИО(ФИК) удаляются! </h5>
-            <h5 style="font-size: min(25px, 3.2vw);"> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
+            <h5 style="font-size: min(23px, 3vw);"> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
             <h5 style="font-size: min(25px, 3.2vw);"> Следующий турнир запланирован на май 2023 года. Пока тренируйтесь. </h5>
+<!--            <h5 style="font-size: min(25px, 3.2vw);"> Итоги турнира будут подведены: 07.04.2023 в 15:00  </h5>-->
 
         <!--<h5 style="font-size: max(12px, 1.2vw)"> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
         <h5 style="font-size: max(12px, 1.2vw)"> 1-3е места – 200рублей, 4-10е места – 100р. Кроме того: по 100р. получат те, кто попадет не менее 10 раз в ТОП-7 дня, </h5>
