--- a/jsprob/templates/jsprob/progress.html
+++ b/jsprob/templates/jsprob/progress.html
@@ -14,7 +14,7 @@
 
         <div class="column-left">
 
-        <h5 style="font-style: italic; font-size: min(32px, 3.5vw);"> Рекорды по каждому этапу в сезоне: </h5>
+        <h5 style="font-style: italic; font-size: min(32px, 3.5vw);"> Рекорды по этапам: в сезоне (абсолютный) </h5>
            {% for sc in scl %}
                 <h6 style="color:blue; font-style: italic; font-size: min(27px, 3.2vw);"> Этап. {{sc.0}}: {{sc.1}} </h6>
            {% endfor %}
@@ -50,7 +50,7 @@
 
         .column-left {
         float: left;
-        width: 50%;
+        width: 56%;
         text-align: center;
         padding-left: 3vw;
         padding-right: 1vw;
@@ -58,7 +58,7 @@
 
         .column-right {
         float: left;
-        width: 50%;
+        width: 44%;
         text-align: center;
         }
 
