--- a/jsprob/templates/jsprob/registr.html
+++ b/jsprob/templates/jsprob/registr.html
@@ -18,6 +18,7 @@
 
              <h4 style="font-style: italic; font-size: min(32px, 4vw);"> Логин должен быть довольно сложным, чтобы его не смогли повторить другие игроки. </h4>
              <h4 style="font-style: italic; font-size: min(32px, 4vw);"> Если введенный логин уже будет в базе данных, придется заполнить форму заново. </h4>
+<!--             <h4 style="font-style: italic; font-size: min(27px, 3.5vw);"> Для участия в турнире вместо литеры класса укажите: 'НМ' (Например: PPert6Beta, Петров, Пётр, 6НМ) </h4> </h4>-->
              <h4 style="font-style: italic; font-size: min(25px, 3.2vw);"> В ТОП таблице будут указаны Ваши ФИК (или ФИО)) </h4>
         <h4 id = 'wait0'> </h4>
         </br>
@@ -37,7 +38,6 @@
         txt2.innerHTML = 'ПОЖАЛУЙСТА, ПОДОЖДИТЕ';
         txt2.style.fontStyle = 'Italic';
       }
-
 
 
     </script>
