--- a/jsprob/templates/jsprob/shabl.html
+++ b/jsprob/templates/jsprob/shabl.html
@@ -3,6 +3,8 @@
 <html lang="ru-ru">
 <head>
     <meta charset="UTF-8">
+    <meta data-n-head="ssr" name="description" content="Тренажер по устному счету. Участвуйте в турнирах, получайте призы, улучшайте свои навыки.">
+    <meta data-n-head="ssr" name="og:description" content="Тренажер по устному счету. Участвуйте в турнирах, получайте призы, улучшайте свои навыки.">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
