--- a/jsprob/templates/jsprob/gogo.html
+++ b/jsprob/templates/jsprob/gogo.html
@@ -1,5 +1,5 @@
 {% extends 'jsprob/shabl.html' %}
-{% block title %} Вы успешно зарегистрированы {% endblock %}
+{% block title %} Статистика {% endblock %}
 {% block content %}
 
     <div class="features">
