--- a/jsprob/templates/jsprob/changefik.html
+++ b/jsprob/templates/jsprob/changefik.html
@@ -17,8 +17,8 @@
              </br>
         <h3 id = 'wait0'> </h3>
 
-        <button class="btn btn-success btn" style="font-size: min(25px, 3vw);" id = 'butt1' type="submit" name="intlg" onclick="Func()"> ВВЕСТИ </button></br></br>
-        <a href="{% url 'home' %}" style="font-size: min(25px, 3vw);" id = 'butt2' class="btn btn-success btn-sm"> Начальное меню </a></br></br>
+        <button class="btn btn-success btn" style="font-size: min(25px, 3vw);" id = 'butt1' type="submit" name="intlg" onclick="Func(1)"> ВВЕСТИ </button></br></br>
+        <a href="{% url 'home' %}" style="font-size: min(25px, 3vw);" id = 'butt2' class="btn btn-success btn-sm" onclick="Func(2)"> Начальное меню </a></br></br>
 
     </form>
     </div>
@@ -28,13 +28,14 @@
     document.getElementById("inpu2").value = '{{ph1}}';
     document.getElementById("inpu3").value = '{{ph2}}';
 
-    function Func() {
+    function Func(t) {
         localStorage.setItem('vrk', 10000);
         document.getElementById('butt1').style.display='none';
         document.getElementById('butt2').style.display='none';
 
         var txt2 = document.getElementById('wait0');
-        txt2.innerHTML = 'ИЗМЕНЯЕМ ДАННЫЕ, НЕМНОГО ПОДОЖДИТЕ';
+        if (t==1) {txt2.innerHTML = 'ИЗМЕНЯЕМ ДАННЫЕ, НЕМНОГО ПОДОЖДИТЕ';}
+        if (t==2) {txt2.innerHTML = 'НЕМНОГО ПОДОЖДИТЕ';}
         txt2.style.fontStyle = 'Italic';
       }
 
