Click-through_Enter_BS

--- a/jsprob/templates/jsprob/index.html
+++ b/jsprob/templates/jsprob/index.html
@@ -3,10 +3,10 @@
 {% block content %}
 
 <aside>
-    <h5 class="featuress" id = 'nomb' style="font-style: italic; font-size: min(35px, 5.5vw);"> Здравствуйте{{nm}}! </h5>
-    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 4.2vw);"> Тренажер устного счета приветствует Вас! </h5>
+    <h5 class="featuress" id = 'nomb' style="font-style: italic; font-size: min(35px, 5.5vw);"> Здравствуйте{{nm}}!{{us}} </h5>
+    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 5vw);"> Добро пожаловать на V турнир по устному счету! </h5>
 <!--    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 4.2vw);"> Идет турнир, в рамках Математической недели. </h5>-->
-    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.7vw);"> Участвовать могут все: от мала до велика. </h5>
+    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.9vw);"> Участвовать могут все: от мала до велика. </h5>
 <!--    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.7vw);"> Участвовать могут ученики любых классов Лицея №1. </h5>-->
 </aside>
 
@@ -67,7 +67,7 @@
         {% endif %}
         {% endif %}
 
-            <h4 style='font-size: min(32px, 4vw);'> Математическая неделя окончена 09.04.2023 </h4>
+<!--            <h4 style='font-size: min(32px, 4vw);'> Математическая неделя окончена 09.04.2023 </h4>-->
 <!--            <h4 style='font-size: min(32px, 4vw);'> Сроки математической недели: 03.04.2023 - 07.04.2023 </h4>-->
 <!--            <h4 style="font-size: min(32px, 4vw);"> ПОЗДРАВЛЯЕМ победителей и призеров! </h4>-->
 <!--            <h4 style="font-size: min(27px, 3.5vw);"> Набравший наибольшее число (в общем ТОП-е) среди каждой параллели получит небольшой ПРИЗ! </h4>-->
@@ -75,12 +75,14 @@
 <!--            <h5 style="font-size: min(25px, 3.2vw);"> Информацию по победителям, призерам и призам можно узнать в комментарии <a href="https://vk.com/vovartus?w=wall4764971_3685%2Fall" target="_blank"> к данному посту. </a> </h5>-->
 <!--            <h5 style="font-size: min(23px, 3vw);"> Призеры магматической недели, то есть те, кто набрали максимальное число баллов в своей параллели, написав литер класса 'НМ', обращайтесь в каб.№413 </h5>-->
 <!--            <h5 style="font-size: min(23px, 3vw);"> Свой результат необходимо будет подтвердить лично. </h5>-->
+
             <h4 style="color: red; font-size: min(32px, 4vw);"> ВНИМАНИЕ! </h4>
             <h5 style="font-size: min(23px, 3vw);"> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
-            <h5 style="font-size: min(23px, 3vw);"> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a>.</h5>
+            <h5 style="font-size: min(23px, 3vw);"> исправьте свои данные ФИО в соответствующем разделе.</h5>
             <h5 style="font-size: min(25px, 3.2vw);"> Участники с некорректными ФИО(ФИК) удаляются! </h5>
             <h5 style="font-size: min(23px, 3vw);"> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
-            <h5 style="font-size: min(25px, 3.2vw);"> Следующий турнир запланирован на май 2023 года. Пока тренируйтесь. </h5>
+            <h5 style="font-size: min(25px, 3.2vw);"> Итоги турнира будут подведены на 20.08.2023г. в 20:00 по MSK </h5>
+            <h5 style="font-size: min(23px, 3vw);"> Если Вы забыли свой логин <a href="https://vk.com/vovartus" target="_blank"> уточните в ЛС </a> .</h5>
 <!--            <h5 style="font-size: min(25px, 3.2vw);"> Итоги турнира будут подведены: 07.04.2023 в 15:00  </h5>-->
 
         <!--<h5 style="font-size: max(12px, 1.2vw)"> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
@@ -134,6 +136,9 @@
 
     <script>
     fl={{fl}};
+    if (fl==1)  {addEventListener("keydown", function(event) {
+                     if (event.keyCode==13 || event.keyCode==32)
+                         {document.getElementById('butt4').click();}})}
     function Func() {
     if (fl==0) {document.getElementById('inpu').style.display='none';
         document.getElementById('butt1').style.display='none';
