--- a/jsprob/templates/jsprob/instr.html
+++ b/jsprob/templates/jsprob/instr.html
@@ -1,7 +1,7 @@
 {% extends 'jsprob/shabl.html' %}
 {% block title %} Приветствие {% endblock %}
 {% block content %}
-
+{% load static %}
 <aside>
     <h2 class="featuress" style="font-style: italic"> ИНСТРУКЦИЯ К ПРИЛОЖЕНИЮ </h2>
 
@@ -10,7 +10,7 @@
 
     <h4> Тренажер позволяет развивать полезный навык быстрого устного счета, </h4>
     <h4> при этом занять высокое место в ТОП-е игроков или просто проверить свои силы. </h4>
-    <h4> Вам предстоит пройти пять этапов (в каждом по 10 простых примеров), </h4>
+    <h4> Вам предстоит пройти шесть этапов (в каждом по 10 простых примеров), </h4>
     <h4> На каждый уровень отводится определенное количество секунд. </h4>
     <h4> Чем быстрее Вы проходите этап, тем больше зарабатываете очков. </h4>
     <h5> Ошибаться можно, но нежелательно, особенно дважды в одном примере, т.к. теряется значительное количество очков. </h5>
@@ -32,6 +32,7 @@
     <h5> Простите, за некоторую вольность в комментариях. </h5>
     <h5> Некоторые ленивые люди говорят, что можно быстро считать на калькуляторе … Можно. Однако, пройдя тренажер достаточное количество раз, можно научиться вычислять подобные примеры в уме, куда быстрее, чем набрать ряд необходимых цифр на калькуляторе. </h5>
     <h5> P.S. Не обновляйте и не переходите на предыдущую страницу браузера в момент прохождения этапов, это приведет к необходимости возвращаться в начальное меню. </h5>
+    <img src="{% static 'jsprob/img/priz.png' %}" width='90%'>
     <h4> С наилучшими пожеланиями, успехов! </h4>
     <h6> Побойкин В.Я. </h6>
     <a href="{% url 'home' %}" class="btn btn-success"> НАЧАЛЬНОЕ МЕНЮ </a>
