--- a/jsprob/templates/jsprob/itog.html
+++ b/jsprob/templates/jsprob/itog.html
@@ -76,7 +76,9 @@
      </style>
 
     <script>
-
+    addEventListener("keydown", function(event) {
+        if (event.keyCode==13 || event.keyCode==32)
+            {document.getElementById('butt').click();}})
 
 
     function Func() {
