--- a/jsprob/templates/jsprob/itoglv.html
+++ b/jsprob/templates/jsprob/itoglv.html
@@ -51,6 +51,9 @@
     </form>
 
     <script>
+    addEventListener("keydown", function(event) {
+        if (event.keyCode==13 || event.keyCode==32)
+            {document.getElementById('butt').click();}})
     function Func() {
                 document.getElementById('butt').style.display='none';
                 document.getElementById('wt').innerHTML = 'Пожалуйста, подождите.';}
