--- a/jsprob/templates/jsprob/progress1.html
+++ b/jsprob/templates/jsprob/progress1.html
@@ -12,32 +12,55 @@
         <h5 style="font-style: italic; font-size: min(32px, 3.7vw);"> Рекорд в сезоне: {{sezsc}} {{sezsc1}} ({{pozsez}} место)</h5>
         <h5 style="font-style: italic; font-size: min(30px, 3.5vw);"> Лучший результат сегодня: {{sctd}} </h5>
 
+        </br>
+        <h5 style="font-style: italic; font-size: min(33px, 3.7vw);"> Статистика по лучшим показателям в этапах: </h5>
         <div class="column-left">
-
-        <h5 style="font-style: italic; font-size: min(32px, 3.5vw);"> Рекорды по этапам: в сезоне (абсолютный) </h5>
+        <h5 style="font-style: italic; font-size: min(30px, 3.5vw);"> В текущем сезоне: </h5>
            {% for sc in scl %}
                 <h6 style="color:blue; font-style: italic; font-size: min(27px, 3.2vw);"> Этап. {{sc.0}}: {{sc.1}} </h6>
            {% endfor %}
-           {% if fl == 1 %}
-           <h6 style="color:blue; font-style: italic; font-size: min(28px, 2.9vw);"> Потенциал: {{pot}} </h6>
-           {% endif %}
+
         </div>
 
         <div class="column-right">
-            <h5 style="font-style: italic; font-size: min(32px, 3.5vw);"> Дневные состязания: </h5>
+            <h5 style="font-style: italic; font-size: min(30px, 3.5vw);"> За всё время: </h5>
+            {% for sc in pol2 %}
+            <h6 style="color:blue; font-style: italic; font-size: min(27px, 3.2vw);"> Этап. {{sc.0}}: {{sc.1}} </h6>
+           {% endfor %}
+           <h6 style="color:blue; font-style: italic; font-size: min(28px, 2.9vw);"> Потенциал: {{pot}} </h6>
+        </div>
+        <div style="clear: left"></div>
+
+        </br>
+        <div class="col-left">
+            <h5 style="font-style: italic; font-size: min(32px, 3.5vw);"> Дневные состязания </h5>
+            <h5 style="font-style: italic; font-size: min(28px, 3.3vw);"> В сезоне: </h5>
             <h5 style="color:blue; font-style: italic; font-size: min(20px, 3.2vw);"> ПОБЕД: {{quantwin}} {{quantwin1}}</h5>
             <h5 style="color:blue; font-style: italic; font-size: min(20px, 3.2vw);"> В ТОП-7: {{quanttop}} {{quanttop1}}</h5>
+            <h5 style="font-style: italic; font-size: min(28px, 3.3vw);"> Всего: </h5>
+            <h5 style="color:blue; font-style: italic; font-size: min(20px, 3.2vw);"> ПОБЕД: {{quantwint}} {{quantwint1}}</h5>
+            <h5 style="color:blue; font-style: italic; font-size: min(20px, 3.2vw);"> В ТОП-7: {{quanttopt}} {{quanttopt1}}</h5>
+        </div>
+        <div class="col-center">
             <h5 style="font-style: italic; font-size: min(32px, 3.5vw);"> Запусков игры: </h5>
             <h5 style="color:blue; font-style: italic; font-size: min(20px, 3.2vw);"> В сезоне: {{na4pops}} {{na4pops1}}</h5>
             <h5 style="color:blue; font-style: italic; font-size: min(20px, 3.2vw);"> Всего: {{na4popt}} {{na4popt1}}</h5>
             <h5 style="font-style: italic; font-size: min(32px, 3.5vw);"> Игра пройдена: </h5>
             <h5 style="color:blue; font-style: italic; font-size: min(20px, 3.2vw);"> В сезоне: {{popsez}} {{popsez1}}</h5>
             <h5 style="color:blue; font-style: italic; font-size: min(20px, 3.2vw);"> Всего: {{popt}} {{popt1}}</h5>
-
         </div>
         <div style="clear: left"></div>
-
-
+        </br>
+        <h5 style="font-style: italic; font-size: min(32px, 3.7vw);"> Вы участвовали в {{sezquan}} {{sezquan1}} </h5>
+        {% if winsez != "0" %}
+        <h5 style="font-style: italic; font-size: min(32px, 3.7vw);"> становились чемпионом в сезонах: {{winsez}} {{winsez1}} </h5>
+        {% endif %}
+        {% if prizersez != "0" %}
+        <h5 style="font-style: italic; font-size: min(32px, 3.7vw);"> становились призёром в сезонах: {{prizersez}} {{prizersez1}} </h5>
+        {% endif %}
+        {% if winsez == "0" %}
+        <h5 style="font-style: italic; font-size: min(31px, 3.6vw);"> лучшая позиция по итогу сезона: {{bestpoz}} </h5>
+        {% endif %}
         </br>
         <h3 id ='wt' style="font-style: italic"></h3>
         <a style="font-size: min(20px, 2.5vw);" href="{% url 'home' %}" id = 'butt1' class="btn btn-success" onclick="Func()"> СТАРТОВОЕ МЕНЮ </a>
@@ -50,17 +73,32 @@
 
         .column-left {
         float: left;
-        width: 56%;
+        width: 50%;
         text-align: center;
         padding-left: 3vw;
         padding-right: 1vw;
         }
-
         .column-right {
         float: left;
-        width: 44%;
+        width: 50%;
         text-align: center;
         }
+        .col-left {
+        float: left;
+        width: 50%;
+        text-align: center;
+        }
+        .col-center {
+        float: left;
+        width: 50%;
+        text-align: center;
+        }
+        .col-right {
+        float: left;
+        width: 0%;
+        text-align: center;
+        }
+
 
     </style>
 
