--- a/jsprob/templates/jsprob/shabl.html
+++ b/jsprob/templates/jsprob/shabl.html
@@ -11,6 +11,7 @@
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'jsprob/css/jsprob.css' %}">
+<!--    <img src="{% static 'priz.png' %}">-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="shortcut icon" type="image/png" href='{% static "jsprob/img/2pl2_Ico.jpg" %}'>
     <link rel="apple-touch-icon" sizes="180x180" href='{% static "jsprob/img/2pl2_Ico_180.jpg" %}'>
