--- a/jsprob/templates/jsprob/index.html
+++ b/jsprob/templates/jsprob/index.html
@@ -4,7 +4,7 @@
 
 <aside>
     <h5 class="featuress" id = 'nomb' style="font-style: italic; font-size: min(35px, 5.5vw);"> Здравствуйте{{nm}}!{{us}} </h5>
-    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 5vw);"> Добро пожаловать на V турнир по устному счету! </h5>
+    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 5vw);"> Добро пожаловать на VI турнир по устному счету! </h5>
 <!--    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 4.2vw);"> Идет турнир, в рамках Математической недели. </h5>-->
     <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.9vw);"> Участвовать могут все: от мала до велика. </h5>
 <!--    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.7vw);"> Участвовать могут ученики любых классов Лицея №1. </h5>-->
@@ -81,7 +81,8 @@
             <h5 style="font-size: min(23px, 3vw);"> исправьте свои данные ФИО в соответствующем разделе.</h5>
             <h5 style="font-size: min(25px, 3.2vw);"> Участники с некорректными ФИО(ФИК) удаляются! </h5>
             <h5 style="font-size: min(23px, 3vw);"> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
-            <h5 style="font-size: min(25px, 3.2vw);"> Итоги турнира будут подведены на 20.08.2023г. в 20:00 по MSK </h5>
+            <h5 style="font-size: min(23px, 3vw);"> V этап завершен. Подробности о победителях и призерах см.в разделе "Инструкция" </h5>
+            <h5 style="font-size: min(25px, 3.2vw);"> Итоги осеннего турнира будут подведены 30.11.2023г. в 20:00 по MSK </h5>
             <h5 style="font-size: min(23px, 3vw);"> Если Вы забыли свой логин <a href="https://vk.com/vovartus" target="_blank"> уточните в ЛС </a> .</h5>
 <!--            <h5 style="font-size: min(25px, 3.2vw);"> Итоги турнира будут подведены: 07.04.2023 в 15:00  </h5>-->
 
