--- a/jsprob/templates/jsprob/instr.html
+++ b/jsprob/templates/jsprob/instr.html
@@ -32,10 +32,11 @@
     <h5> Простите, за некоторую вольность в комментариях. </h5>
     <h5> Некоторые ленивые люди говорят, что можно быстро считать на калькуляторе … Можно. Однако, пройдя тренажер достаточное количество раз, можно научиться вычислять подобные примеры в уме, куда быстрее, чем набрать ряд необходимых цифр на калькуляторе. </h5>
     <h5> P.S. Не обновляйте и не переходите на предыдущую страницу браузера в момент прохождения этапов, это приведет к необходимости возвращаться в начальное меню. </h5>
-    <img src="{% static 'jsprob/img/priz.png' %}" width='90%'>
+    <img src="{% static 'jsprob/img/priz.png' %}">
+    <h5> Для получения приза <a href="https://vk.com/vovartus" target="_blank"> напишите в ЛС </a> свои: 1) ФИО(К), 2) логин, 3) Куда перевести приз (телефон, реквизиты) </h5>
     <h4> С наилучшими пожеланиями, успехов! </h4>
-    <h6> Побойкин В.Я. </h6>
-    <a href="{% url 'home' %}" class="btn btn-success"> НАЧАЛЬНОЕ МЕНЮ </a>
+    <h5> Побойкин В.Я. </h5>
+    <a href="{% url 'home' %}" id="butt" class="btn btn-success"> НАЧАЛЬНОЕ МЕНЮ </a>
     </br>
     </br>
     </br>
@@ -50,4 +51,10 @@ h6 {
   text-align: right;
 }
 </style>
+<script>
+addEventListener("keydown", function(event) {
+    if (event.keyCode==13 || event.keyCode==32)
+        {document.getElementById('butt').click();}})
+</script>
+
 {% endblock %}
