--- a/jsprob/templates/jsprob/level1.html
+++ b/jsprob/templates/jsprob/level1.html
@@ -21,7 +21,7 @@
             document.getElementById('wt').style.cssText = 'font-style: italic; font-size: 112px;'
             document.cookie = "lelrec15=" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
             document.cookie = "lelrec15=e";
-            window.location.assign('{{list}}');
+            window.location.assign('passLv');
             }
 
     </script>
